--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,11 @@
 	<link href="/css/styles.css" media="screen" rel="stylesheet" type="text/css" media="screen,projection" />
 </head>
 <body>
-
+	
+		<div id="nav">
+			<a href="/list">Login</a>
+		</div>
+		
 <% if authorized? %>	
 	<div id="nav">
 		<a href="/list">List</a> | <a href="/new">New</a>
