--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,10 +7,12 @@
 	<link href="/css/styles.css" media="screen" rel="stylesheet" type="text/css" media="screen,projection" />
 </head>
 <body>
-	
+
+<% if not authorized? %>	
 		<div id="nav">
 			<a href="/list">Login</a>
 		</div>
+<% end %>
 		
 <% if authorized? %>	
 	<div id="nav">
